# Switch-Refresh-Configuration-Import-Tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GenericLabNotesExtractor.spec  LICENSE  MANIFEST.in  README.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  SwitchRefreshConfigurationImportTool.spec  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: tests.yml
docs/: archive-policy.md  development-principles.md  fixture-strategy.md  profile-engine-design-notes.md  profile-schema-draft.md  project-history.md  release-checklist.md  roadmap.md  target-profiles.md
docs/archive/: README.md
release/: README.md
src/generic_lab_notes_extractor/: __init__.py  app.py  core.py
src/generic_lab_notes_extractor/assets/: generic_baseline_lab_sheet.txt  generic_sample_running_config.txt
src/switch_refresh_config_import_tool/: __init__.py  app.py  core.py  engine_models.py  mapping_engine.py  plan_renderer.py  profile_schema.py  source_parser.py
tests/: test_distribution.py  test_engine_architecture.py  test_plan_renderer.py
