[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-lab-notes-extractor"
version = "1.0.0"
description = "Local GUI for extracting reusable Cisco switch details into an operator-reviewed lab sheet."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Generic Lab Notes Extractor contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
theme = ["ttkbootstrap>=1.10,<2"]
build = ["pyinstaller>=6,<7"]
dev = ["ttkbootstrap>=1.10,<2", "pyinstaller>=6,<7"]

[project.scripts]
generic-lab-notes-extractor = "generic_lab_notes_extractor.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
generic_lab_notes_extractor = ["assets/*.txt"]
