[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "switch-refresh-config-import-tool"
version = "1.0.0"
description = "Local GUI for importing selected values from an existing switch configuration into a reviewable refresh build template."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Switch Refresh Configuration Import Tool contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
theme = ["ttkbootstrap>=1.10,<2"]
build = ["pyinstaller>=6,<7"]
dev = ["ttkbootstrap>=1.10,<2", "pyinstaller>=6,<7"]

[project.scripts]
switch-refresh-config-import-tool = "switch_refresh_config_import_tool.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
switch_refresh_config_import_tool = ["assets/*.txt"]
